--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
             - ./traefik:/etc/traefik
             - /var/run/docker.sock:/var/run/docker.sock:ro
     divvy-go:
-        image: "divvy-go:latest"
+        build: .
         container_name: "divvy"
         ports:
             - "8000:8000"
