--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
             - "8000:8000"
         labels:
             - 'traefik.enable=true'
-            - 'traefik.http.routers.divvy-go.rule=Host(`api4.jamwallet.app`)'
+            - 'traefik.http.routers.divvy-go.rule=Host(`api.davidplell.com`)'
             - 'traefik.http.routers.divvy-go.tls=true'
             - 'traefik.http.routers.divvy-go.tls.certresolver=lets-encrypt'
             # - "traefik.http.routers.divvy-go.entrypoints=web"
