--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
 version: "3.3"  # optional since v1.27.0
 services:
-    webserver:
-        image: nginx:latest
+    nginx:
+        container_name: nginx
+        restart: unless-stopped
+        image: nginx
         ports:
-        - 80:80
-        - 443:443
-        restart: always
+            - 80:80
+            - 443:443
         volumes:
-        - ./nginx/conf/:/etc/nginx/conf.d/:ro
-        - ./certbot/www:/var/www/certbot/:ro
-        - ./certbot/conf/:/etc/nginx/ssl/:ro
+            - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./certbot/conf:/etc/letsencrypt
+            - ./certbot/www:/var/www/certbot
     certbot:
-        image: certbot/certbot:latest
-        volumes:
-        - ./certbot/www/:/var/www/certbot/:rw
-        - ./certbot/conf/:/etc/letsencrypt/:rw
+        image: certbot/certbot
+        container_name: certbot
+        volumes: 
+        - ./certbot/conf:/etc/letsencrypt
+        - ./certbot/www:/var/www/certbot
+        command: certonly --webroot -w /var/www/certbot --email plelldavid@gmail.com -d api.davidplell.com --agree-tos
     divvy:
         build: .
         ports:
