--- a/traefik_dynamic.toml
+++ b/traefik_dynamic.toml
@@ -1,7 +1,6 @@
 [http.routers.api]
-  rule = "Host(`monitor.api.davidplell.com`)"
+  rule = "Host(`api.davidplell.com`)"
   entrypoints = ["websecure"]
-  middlewares = ["simpleAuth"]
   service = "api@internal"
 [http.routers.api.tls]
   certResolver = "lets-encrypt"
