--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,8 @@ services:
             - web
         ports:
             - "8000:8000"
+        volumes:
+            - tokens:/divvy/tokens
+
+volumes:
+    tokens: 
