token refresh and metadata

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ networks:
 
 services:
     divvy:
+        restart: on-failure
         build: .
         labels:
             - traefik.http.routers.divvy.rule=Host(`api.plellworks.com`)
