--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,18 @@ networks:
         external: false
 
 services:
-    db:
-        image: postgres:13
-        restart: on-failure
-        environment:
-            - POSTGRES_PASSWORD=postgres
-            - POSTGRES_USER=postgres
-        volumes:
-            - ./data/pgdata/:/var/lib/postgresql/data
-        networks:
-            - internal
-        ports:
-            - 5432:5432
+    # db:
+    #     image: postgres:13
+    #     restart: on-failure
+    #     environment:
+    #         - POSTGRES_PASSWORD=postgres
+    #         - POSTGRES_USER=postgres
+    #     volumes:
+    #         - ./data/pgdata/:/var/lib/postgresql/data
+    #     networks:
+    #         - internal
+    #     ports:
+    #         - 5432:5432
 
     divvy:
         restart: on-failure
@@ -30,8 +30,8 @@ services:
         networks:
             - internal
             - web
-        depends_on:
-            - db
+        # depends_on:
+        #     - db
         volumes:
             - ./data/authtokens:/app/divvy/tokens
         ports:
